# vsc-cpp-template-wsl

./: .gitignore  CMakeLists.txt  README.md
inc/: sample.h
src/: CMakeLists.txt  add.cpp  head.h  main.cpp  sample.cpp  sub.cpp
src/test1/: head.h  main.cpp  sub.cpp
